--- a/.github/workflows/commit-testrun.yml
+++ b/.github/workflows/commit-testrun.yml
@@ -2,9 +2,9 @@ name: Testrun
 
 on:
   push:
-    branches: *
+    branches: [ * ]
   pull_request:
-    branches: *
+    branches: [ * ]
 
 jobs:
   build:
