--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -37,4 +37,4 @@ jobs:
         prerelease: false
         automatic_release_tag: "latest"
         files: |
-          .Dartin/Dartin.Application/bin/Debug/net5.0-windows
+          ./Dartin/Dartin.Application/bin/Debug/net5.0-windows
