--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -29,12 +29,16 @@ jobs:
       
     - name: Test
       run: dotnet test --no-build --verbosity normal
-      
+    
+    - name: Get current date
+      id: date
+      run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+    
     - name: Deploy
       uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         prerelease: false
-        automatic_release_tag: "latest"
+        automatic_release_tag: "${{ steps.date.outputs.date }}"
         files: |
           ./Dartin/Dartin.Application/bin/Debug/net5.0-windows
