--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -25,10 +25,10 @@ jobs:
       run: dotnet restore
       
     - name: Build
-      run: dotnet publish --configuration Release --self-contained True --runtime win-x64 --verbosity Normal /property:PublishSingleFile=True /property:IncludeNativeLibrariesForSelfExtract=True /property:DebugType=None /property:DebugSymbols=False ./Dartin/Dartin.Application --no-restore
+      run: dotnet publish --configuration Release --self-contained True --runtime win-x64 --verbosity Normal /property:PublishSingleFile=True /property:IncludeNativeLibrariesForSelfExtract=True /property:DebugType=None /property:DebugSymbols=False --no-restore --framework net5.0-windows ./Dartin/Dartin.Application
 
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --verbosity normal
 
     - name: Get current date
       id: date
