--- a/Dartin/Dartin.Application/Dartin.Application.csproj
+++ b/Dartin/Dartin.Application/Dartin.Application.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
-    <RootNamespace>MVVM</RootNamespace>
+    <RootNamespace>Dartin</RootNamespace>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
