--- a/Dartin/Dartin.Application/Dartin.Application.csproj
+++ b/Dartin/Dartin.Application/Dartin.Application.csproj
@@ -19,7 +19,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Update="Views\MainMenuView - Copy.xaml.cs">
+    <Compile Update="Views\MainMenuView.xaml.cs">
       <DependentUpon>MainMenuView.xaml.cs</DependentUpon>
     </Compile>
   </ItemGroup>
