Fix faulty view names

--- a/Dartin/Dartin.Application/Dartin - Backup.Application.csproj
+++ b/Dartin/Dartin.Application/Dartin - Backup.Application.csproj
@@ -19,6 +19,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Update="Views\MainMenuView - Copy.xaml.cs">
+      <DependentUpon>MainMenuView.xaml.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
