--- a/Dartin/Dartin.Application/Dartin.Application.csproj
+++ b/Dartin/Dartin.Application/Dartin.Application.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Caliburn.Micro" Version="4.0.173" />
+    <PackageReference Include="FamFamFam.Flags.Wpf" Version="1.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
